GeradorCarro/V1/readme.md
# Gerador de Carro

O gerador de Carros foi construido em duas linguagens, JavaScript e Haskell. Ambas as implementações, estão armazenadas na diretoria com o respetivo nome da Linguagem.

## 1. Haskell

```
$ ghci caminho/ate/ao/ficheiro/EX1.hs
```

e de seguida

```
*Main> sample genCarro
```

Na consola deverão aparecer a

## 2. JavaScript (NodeJS)
Antes de executar o Scrit, é importante instalar o [NodeJS](https://nodejs.org) com [NPM](https://www.npmjs.com). Assim que tenham sido instalados, executar o seguinte comando, na diretoria do ficheiro `package.json`. 
 
Assim que todos os módulos tenham sido instalados com sucesso, poderá ser executado o gerador recorrendo ao comando:

```
$ node index
```

Corrido o comando, a consola deverá indicar se existe algum erro ou se o gerador conclui com sucesso. Para este ultimo caso, deverá aparecer um ficheiro `carros.txt` na mesma diretoria.


## Fonte de Dados
* [Statista](https://www.statista.com/statistics/264031/top-selling-car-brands-in-europe-by-number-of-new-registrations/)  

# Alunos
Diogo Duarte - PG41843  
Miguel Solans - PG41841  
André Coutinho - PG39284  
Rita Pereira    